--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Hunger</string>
 
-    <string name="hello_world">Test!</string>
+    <string name="hello_world">Hello World!</string>
     <string name="action_settings">Settings</string>
 </resources>
