--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="Manager">MANAGER</string>
     <string name="Employee">EMPLOYEE</string>
+    <string name="orders">ORDERS</string>
+    <string name="products">PRODUCTS</string>
+    <string name="dollar">$</string>
 </resources>
