--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="products">PRODUCTS</string>
     <string name="dollar">$</string>
     <string name="add_order">Add Order</string>
+    <string name="add_product">Add Product</string>
+    <string name="choose_table">Choose Table</string>
+    <string name="save">Save</string>
 </resources>
