--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="orders">ORDERS</string>
     <string name="products">PRODUCTS</string>
     <string name="dollar">$</string>
+    <string name="choose_table">Choose Table</string>
+    <string name="save">Save</string>
 </resources>
