--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="product_sort">SORT</string>
     <string name="product_price">PRICE</string>
     <string name="product_color">COLOR</string>
+    <string name="add_product">Add Product</string>
 </resources>
