--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="Manager">MANAGER</string>
-    <string name="Employee">EMPLOYEE</string>
+    <string name="loginUser">USER</string>
+    <string name="loginPW">PASSWORD</string>
     <string name="orders">ORDERS</string>
     <string name="products">PRODUCTS</string>
-    <string name="dollar">$</string>
     <string name="choose_table">Choose Table</string>
     <string name="save">Save</string>
     <string name="product_name">NAME</string>
@@ -15,4 +15,19 @@
     <string name="product_price">PRICE</string>
     <string name="product_color">COLOR</string>
     <string name="add_product">Add Product</string>
+    <string name="add_order">ADD ORDER</string>
+    <string name="turnovers">TURNOVERS</string>
+    <string name="btnLogin">LOG IN</string>
+    <string name="version">VERSION 1.0.0</string>
+    <string name="copyRight">Copyright © 2015 BenGo Inc.</string>
+    <string name="allRights">All rights reserved</string>
+    <string name="email">contact@bengo.com</string>
+    <string name="today">TODAY</string>
+    <string name="soldToday">1 000.- CHF</string>
+    <string name="soldMonth">10 000.- CHF</string>
+    <string name="soldYear">100 000.- CHF</string>
+    <string name="month">MONTH</string>
+    <string name="year">YEAR</string>
+    <string name="title_activity_menu">menu</string>
+
 </resources>
