- Object Order - Object Product - Order Data Source - Product Data Source - Modifications of Contract and SQLiteHelperClass

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="month">MONTH</string>
     <string name="year">YEAR</string>
     <string name="title_activity_menu">menu</string>
+    <string name="action_info">About</string>
 
 </resources>
